--- a/Examples/Digst.OioIdws.WscExampleCore/App.config
+++ b/Examples/Digst.OioIdws.WscExampleCore/App.config
@@ -7,7 +7,7 @@
   </configSections>
 
   <!--SOAP 1.1 WSP-->
-  <!--<oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://n2adgangsstyring.eksterntest-stoettesystemerne.dk/runtime/services/kombittrust/14/certificatemixed"
+  <!--<oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://sts.vconf-stage.dk/sts/service/sts"
 													 stsEntityIdentifier="https://saml.n2adgangsstyring.eksterntest-stoettesystemerne.dk/runtime"
 													 tokenLifeTimeInMinutes="5"
 												   includeLibertyHeader="true"
@@ -20,20 +20,30 @@
 	</oioIdwsWcfConfiguration>-->
 
   <!--SOAP 1.2 WSP-->
-  <oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://n2adgangsstyring.eksterntest-stoettesystemerne.dk/runtime/services/kombittrust/14/certificatemixed"
-                                                   stsEntityIdentifier="https://saml.n2adgangsstyring.eksterntest-stoettesystemerne.dk/runtime"
+  <oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://sts.vconf-stage.dk/sts/service/sts"
+                                                   stsEntityIdentifier="https://sts.vconf-stage.dk/sts/service/sts"
                                                    tokenLifeTimeInMinutes="5"
                                                    includeLibertyHeader="true"
-                                                   wspEndpointID="http://wsp12.oioidws-net.dk/service/service/1"
+                                                   wspEndpointID="urn:medcom:videoapi"
                                                    wspEndpoint="https://kombitwsp12.azurewebsites.net/HelloWorld.svc"
-                                                   wspSoapVersion="1.2" cvr="11111111" maxReceivedMessageSize="256000">
-    <clientCertificate findValue="79cfb7a45b74f4c64ea408503002df7d1143ef40" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
-    <stsCertificate findValue="7002cf221d1d3979eca623599e43e0b6b4c8920c" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindByThumbprint"/>
-    <serviceCertificate findValue="ca30025a4981147505b8d7a59052ac40c7033688" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindByThumbprint"/>
+                                                   wspSoapVersion="1.1" cvr="11111111" maxReceivedMessageSize="256000">
+    <clientCertificate findValue="4341BF2DE2BA02E11314B17B797AB229A6CD3D8D" storeLocation="CurrentUser" storeName="My" x509FindType="FindByThumbprint"/>
+    <stsCertificate findValue="d98aaeafc7495ab5f52796352c8f39dd7584f41a" storeLocation="CurrentUser" storeName="Root" x509FindType="FindByThumbprint"/>
+    <serviceCertificate findValue="4341BF2DE2BA02E11314B17B797AB229A6CD3D8D" storeLocation="CurrentUser" storeName="My" x509FindType="FindByThumbprint"/>
   </oioIdwsWcfConfiguration>
 
   <oioIdwsLoggingConfiguration logger="Digst.OioIdws.WscExampleCommon.Log4NetLogger, Digst.OioIdws.WscExampleCommon"/>
-
+  <!--<system.serviceModel>
+    <bindings>
+      <customBinding>
+        --><!-- Configure a CustomBinding that supports http transport and text encoding --><!--
+        <binding name="HttpBinding">
+          <textMessageEncoding messageVersion="Soap11WSAddressing10"/>
+          <httpTransport/>
+        </binding>
+      </customBinding>
+    </bindings>
+  </system.serviceModel>-->
   <log4net>
     <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
       <file value="c:\temp\Digst.OioIdws.WscExampleCore.log"/>
@@ -49,4 +59,5 @@
       <appender-ref ref="RollingFile"/>
     </root>
   </log4net>
+  
 </configuration>
