Adjust config for signatur STS/service.

--- a/Examples/Digst.OioIdws.WscExampleCore/App.config
+++ b/Examples/Digst.OioIdws.WscExampleCore/App.config
@@ -19,17 +19,17 @@
 		<serviceCertificate findValue="ca30025a4981147505b8d7a59052ac40c7033688" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindByThumbprint"/>
 	</oioIdwsWcfConfiguration>-->
 
-  <!--SOAP 1.2 WSP-->
-  <oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://sts.vconf-stage.dk/sts/service/sts"
-                                                   stsEntityIdentifier="https://sts.vconf-stage.dk/sts/service/sts"
+  <!--SOAP 1.1 WSP-->
+  <oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://sts-signatur.hosting.kitkube.dk/sts/service/sts"
+                                                   stsEntityIdentifier="https://sts-signatur.hosting.kitkube.dk/sts/service/sts"
                                                    tokenLifeTimeInMinutes="5"
                                                    includeLibertyHeader="true"
-                                                   wspEndpointID="urn:medcom:videoapi"
+                                                   wspEndpointID="urn:signatur"
                                                    wspEndpoint="https://kombitwsp12.azurewebsites.net/HelloWorld.svc"
                                                    wspSoapVersion="1.1" cvr="11111111" maxReceivedMessageSize="256000">
-    <clientCertificate findValue="4341BF2DE2BA02E11314B17B797AB229A6CD3D8D" storeLocation="CurrentUser" storeName="My" x509FindType="FindByThumbprint"/>
-    <stsCertificate findValue="d98aaeafc7495ab5f52796352c8f39dd7584f41a" storeLocation="CurrentUser" storeName="Root" x509FindType="FindByThumbprint"/>
-    <serviceCertificate findValue="4341BF2DE2BA02E11314B17B797AB229A6CD3D8D" storeLocation="CurrentUser" storeName="My" x509FindType="FindByThumbprint"/>
+    <clientCertificate findValue="e296af5d96cd3472c08e9835e93f6c11dd871687" storeLocation="CurrentUser" storeName="My" x509FindType="FindByThumbprint"/>
+    <stsCertificate findValue="998b3be8ecbe5ec0dbf7b25cd6ec6bdbeb5f10b2" storeLocation="CurrentUser" storeName="Root" x509FindType="FindByThumbprint"/>
+    <serviceCertificate findValue="e296af5d96cd3472c08e9835e93f6c11dd871687" storeLocation="CurrentUser" storeName="My" x509FindType="FindByThumbprint"/>
   </oioIdwsWcfConfiguration>
 
   <oioIdwsLoggingConfiguration logger="Digst.OioIdws.WscExampleCommon.Log4NetLogger, Digst.OioIdws.WscExampleCommon"/>
